*Connecting code
* I connected Todd code to palette
* Working with front end
* Convert colorpalette now work
*Download the data to Todd file